# Discboard

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.bot  Dockerfile.frontend  README.md  SPEC.md  docker-compose.yml
.github/workflows/: sonarqube.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  automation.py  bookmarks.py  config.py  events.py  github.py  health.py  services.py  sessions.py  token_usage.py  webhooks.py
backend/app/automation/: __init__.py  rules.py
backend/app/discord/: __init__.py  bot.py  commands.py
backend/app/models/: __init__.py  bookmark.py  service.py  session.py  token_usage.py
backend/app/services/: __init__.py  github.py  sync.py  uptime_kuma.py
backend/tests/: test_api.py  test_models.py
frontend/: package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: command-palette.tsx  layout.tsx  page.tsx
frontend/app/automation/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/webhooks/: page.tsx
frontend/lib/: types.ts  utils.ts
